[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/ui/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/components/HoverableButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/ui/font_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui.png" type="Texture" id=4]
[ext_resource path="res://ui/components/ScalableTexture.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/ui/font_default_big.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/GameOver.gd" type="Script" id=7]
[ext_resource path="res://sound/point_rise.mp3" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 41, 0, 11, 11 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=5]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Margin/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.27451 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Margin/Panel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 73, 13 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "appear"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.27451 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Margin/Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.277393, 1 ),
"update": 0,
"values": [ Vector2( 73, 200 ), Vector2( 73, 13 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animate_stats"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Margin/Panel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.001, 0.01 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
theme = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="Margin"]
margin_left = 73.0
margin_top = 13.0
margin_right = 262.0
margin_bottom = 176.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Margin" type="MarginContainer" parent="Margin/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 182.0
margin_bottom = 156.0
rect_min_size = Vector2( 175, 0 )

[node name="VBox" type="VBoxContainer" parent="Margin/Panel/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 170.0
margin_bottom = 144.0

[node name="TimesUp" type="Label" parent="Margin/Panel/Margin/VBox"]
margin_right = 165.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "Time's Up!"
align = 1

[node name="HBox1" type="HBoxContainer" parent="Margin/Panel/Margin/VBox"]
margin_top = 25.0
margin_right = 165.0
margin_bottom = 43.0
alignment = 1

[node name="TimerIcon" parent="Margin/Panel/Margin/VBox/HBox1" instance=ExtResource( 5 )]
margin_left = 67.0
margin_right = 85.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 0 )
texture = SubResource( 1 )

[node name="Points" type="Label" parent="Margin/Panel/Margin/VBox/HBox1"]
margin_left = 89.0
margin_right = 98.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 6 )
text = "0"

[node name="HSeparator" type="HSeparator" parent="Margin/Panel/Margin/VBox"]
margin_top = 47.0
margin_right = 165.0
margin_bottom = 51.0

[node name="HBox2" type="HBoxContainer" parent="Margin/Panel/Margin/VBox"]
margin_top = 55.0
margin_right = 165.0
margin_bottom = 69.0

[node name="Label" type="Label" parent="Margin/Panel/Margin/VBox/HBox2"]
margin_right = 91.0
margin_bottom = 14.0
text = "Plants harvested"

[node name="Harvested" type="Label" parent="Margin/Panel/Margin/VBox/HBox2"]
margin_left = 95.0
margin_right = 165.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HBox4" type="HBoxContainer" parent="Margin/Panel/Margin/VBox"]
margin_top = 73.0
margin_right = 165.0
margin_bottom = 87.0

[node name="Label" type="Label" parent="Margin/Panel/Margin/VBox/HBox4"]
margin_right = 84.0
margin_bottom = 14.0
text = "Weeds uprooted"

[node name="Uprooted" type="Label" parent="Margin/Panel/Margin/VBox/HBox4"]
margin_left = 88.0
margin_right = 165.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HBox5" type="HBoxContainer" parent="Margin/Panel/Margin/VBox"]
margin_top = 91.0
margin_right = 165.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="Margin/Panel/Margin/VBox/HBox5"]
margin_right = 80.0
margin_bottom = 14.0
text = "Plants watered"

[node name="Watered" type="Label" parent="Margin/Panel/Margin/VBox/HBox5"]
margin_left = 84.0
margin_right = 165.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HSeparator2" type="HSeparator" parent="Margin/Panel/Margin/VBox"]
margin_top = 109.0
margin_right = 165.0
margin_bottom = 113.0
custom_styles/separator = SubResource( 2 )

[node name="HBox3" type="HBoxContainer" parent="Margin/Panel/Margin/VBox"]
modulate = Color( 1, 1, 1, 0.909804 )
margin_top = 117.0
margin_right = 165.0
margin_bottom = 139.0

[node name="BtnMenu" parent="Margin/Panel/Margin/VBox/HBox3" instance=ExtResource( 2 )]
margin_right = 80.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "MENU"

[node name="BtnPlay" parent="Margin/Panel/Margin/VBox/HBox3" instance=ExtResource( 2 )]
margin_left = 84.0
margin_right = 165.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "RETRY"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/RESET = SubResource( 5 )
anims/appear = SubResource( 4 )

[node name="Points" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
